<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontEditTextPreference
        app:key="volcano_engine_api_key"
        app:title="@string/settings_volcano_engine_api_key_title"
        app:summary="@string/settings_volcano_engine_api_key_summary"
        app:useSimpleSummaryProvider="false" />

    <ml.docilealligator.infinityforreddit.customviews.preference.CustomFontEditTextPreference
        app:key="volcano_engine_model_id"
        app:title="@string/settings_volcano_engine_model_id_title"
        app:summary="@string/settings_volcano_engine_model_id_summary"
        app:defaultValue="deepseek-v3-2-251201"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
